feat(User): remaining controllers tests