@@ -8,16 +8,22 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 import pap.backend.category.Category;
 import pap.backend.category.CategoryController;
 import pap.backend.category.CategoryService;
+import pap.backend.config.JwtService;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
 
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.hasSize;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -30,107 +36,98 @@ class CategoryControllerTest {
     @MockBean
     private CategoryService categoryService;
 
+    @MockBean
+    private JwtService jwtService;
+
+    @MockBean
+    private UserDetailsService userDetailsService;
+
     @Autowired
     private ObjectMapper objectMapper;
 
-    private List<Category> categoryList;
+    private Category electronicsCategory;
+    private Category booksCategory;
 
     @BeforeEach
     void setUp() {
-        categoryList = Arrays.asList(
-                new Category("Electronics"),
-                new Category("Books")
-        );
+        electronicsCategory = new Category("Electronics");
+        booksCategory = new Category("Books");
+    }
+
+    @BeforeEach
+    void setUpAuthentication() {
+        // Mock an authenticated admin user
+        UsernamePasswordAuthenticationToken authentication =
+                new UsernamePasswordAuthenticationToken("admin@example.com", null, List.of(() -> "ROLE_ADMIN"));
+        SecurityContextHolder.getContext().setAuthentication(authentication);
     }
 
     @Test
+    @WithMockUser(username = "admin@example.com", roles = "ADMIN")
     void getCategories_ShouldReturnAllCategories() throws Exception {
-        Mockito.when(categoryService.getCategories()).thenReturn(categoryList);
+        List<Category> categories = Arrays.asList(electronicsCategory, booksCategory);
+        Mockito.when(categoryService.getCategories()).thenReturn(categories);
 
         mockMvc.perform(get("/api/v1/category/all"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(2)))
-                .andExpect(jsonPath("$[0].name", is("Electronics")))
-                .andExpect(jsonPath("$[1].name", is("Books")));
+                .andExpect(jsonPath("$[0].name").value("Electronics"))
+                .andExpect(jsonPath("$[1].name").value("Books"));
     }
 
     @Test
+    @WithMockUser(username = "admin@example.com", roles = "ADMIN")
     void getCategory_ShouldReturnCategoryById() throws Exception {
-        Mockito.when(categoryService.getCategory(1L)).thenReturn(categoryList.get(0));
+        Mockito.when(categoryService.getCategory(1L)).thenReturn(electronicsCategory);
 
         mockMvc.perform(get("/api/v1/category/get/{categoryId}", 1L))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name", is("Electronics")));
+                .andExpect(jsonPath("$.name").value("Electronics"));
     }
 
     @Test
-    void getCategory_ShouldReturnNotFoundForInvalidId() throws Exception {
-        Mockito.when(categoryService.getCategory(99L)).thenThrow(new NoSuchElementException("Category not found"));
-    }
-
-    @Test
-    void addNewCategory_ShouldCreateCategory() throws Exception {
-        Category newCategory = new Category("Clothing");
+    @WithMockUser(username = "admin@example.com", roles = "ADMIN")
+    void addNewCategory_ShouldAddCategory() throws Exception {
+        Mockito.doNothing().when(categoryService).addNewCategory(Mockito.any(Category.class));
 
         mockMvc.perform(post("/api/v1/category/add")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(newCategory)))
+                        .content(objectMapper.writeValueAsString(electronicsCategory))
+                        .with(csrf()))
                 .andExpect(status().isCreated())
                 .andExpect(content().string("Category added successfully"));
-
-        Mockito.verify(categoryService).addNewCategory(Mockito.any(Category.class));
     }
 
     @Test
-    void addNewCategory_ShouldReturnBadRequestWhenNameIsTaken() throws Exception {
-        Category newCategory = new Category("Electronics");
-
-        Mockito.doThrow(new IllegalStateException("Category name taken"))
-                .when(categoryService).addNewCategory(Mockito.any(Category.class));
-
-        mockMvc.perform(post("/api/v1/category/add")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(newCategory)))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().string("Category name taken"));
-    }
-
-    @Test
+    @WithMockUser(username = "admin@example.com", roles = "ADMIN")
     void deleteCategory_ShouldDeleteCategory() throws Exception {
-        mockMvc.perform(delete("/api/v1/category/delete/{categoryId}", 1L))
+        Mockito.doNothing().when(categoryService).deleteCategory(1L);
+
+        mockMvc.perform(delete("/api/v1/category/delete/{categoryId}", 1L)
+                        .with(csrf()))
                 .andExpect(status().isOk())
                 .andExpect(content().string("Category deleted successfully"));
-
-        Mockito.verify(categoryService).deleteCategory(1L);
     }
 
     @Test
-    void deleteCategory_ShouldReturnNotFoundForInvalidId() throws Exception {
-        Mockito.doThrow(new NoSuchElementException("Category not found"))
-                .when(categoryService).deleteCategory(99L);
-
-        mockMvc.perform(delete("/api/v1/category/delete/{categoryId}", 99L))
-                .andExpect(status().isNotFound())
-                .andExpect(content().string("Category not found"));
-    }
-
-    @Test
+    @WithMockUser(username = "admin@example.com", roles = "ADMIN")
     void updateCategory_ShouldUpdateCategoryName() throws Exception {
+        Mockito.doNothing().when(categoryService).updateCategory(1L, "Updated Category");
+
         mockMvc.perform(put("/api/v1/category/update/{categoryId}", 1L)
-                        .param("name", "Updated Name"))
+                        .param("name", "Updated Category")
+                        .with(csrf()))
                 .andExpect(status().isOk())
                 .andExpect(content().string("Category updated successfully"));
-
-        Mockito.verify(categoryService).updateCategory(1L, "Updated Name");
     }
 
     @Test
-    void updateCategory_ShouldReturnNotFoundForInvalidId() throws Exception {
-        Mockito.doThrow(new NoSuchElementException("Category not found"))
-                .when(categoryService).updateCategory(99L, "New Name");
+    @WithMockUser(username = "admin@example.com", roles = "ADMIN")
+    void deleteCategory_ShouldReturnNotFoundForInvalidId() throws Exception {
+        Mockito.doThrow(new NoSuchElementException("Category not found")).when(categoryService).deleteCategory(99L);
 
-        mockMvc.perform(put("/api/v1/category/update/{categoryId}", 99L)
-                        .param("name", "New Name"))
+        mockMvc.perform(delete("/api/v1/category/delete/{categoryId}", 99L)
+                        .with(csrf()))
                 .andExpect(status().isNotFound())
                 .andExpect(content().string("Category not found"));
     }
